; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_exdatatest.c_MYOBJ_allochello3.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_exdatatest.c_MYOBJ_allochello3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i32 }
%struct.TYPE_8__ = type { i8* }

@saved_idx3 = common dso_local global i32 0, align 4
@CRYPTO_EX_INDEX_APP = common dso_local global i32 0, align 4
@gbl_result = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*, i8*)* @MYOBJ_allochello3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MYOBJ_allochello3(%struct.TYPE_9__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i8* %1, i8** %4, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %5, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 1
  %8 = load i32, i32* @saved_idx3, align 4
  %9 = call %struct.TYPE_8__* @CRYPTO_get_ex_data(i32* %7, i32 %8)
  store %struct.TYPE_8__* %9, %struct.TYPE_8__** %5, align 8
  %10 = call i64 @TEST_ptr_null(%struct.TYPE_8__* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %32

12:                                               ; preds = %2
  %13 = load i32, i32* @CRYPTO_EX_INDEX_APP, align 4
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %15, i32 0, i32 1
  %17 = load i32, i32* @saved_idx3, align 4
  %18 = call i32 @CRYPTO_alloc_ex_data(i32 %13, %struct.TYPE_9__* %14, i32* %16, i32 %17)
  %19 = call i64 @TEST_true(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %32

21:                                               ; preds = %12
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 1
  %24 = load i32, i32* @saved_idx3, align 4
  %25 = call %struct.TYPE_8__* @CRYPTO_get_ex_data(i32* %23, i32 %24)
  store %struct.TYPE_8__* %25, %struct.TYPE_8__** %5, align 8
  %26 = call i64 @TEST_ptr(%struct.TYPE_8__* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %21
  %29 = load i8*, i8** %4, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  store i8* %29, i8** %31, align 8
  br label %35

32:                                               ; preds = %21, %12, %2
  store i64 0, i64* @gbl_result, align 8
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %33, i32 0, i32 0
  store i64 0, i64* %34, align 8
  br label %35

35:                                               ; preds = %32, %28
  ret void
}

declare dso_local i64 @TEST_ptr_null(%struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_8__* @CRYPTO_get_ex_data(i32*, i32) #1

declare dso_local i64 @TEST_true(i32) #1

declare dso_local i32 @CRYPTO_alloc_ex_data(i32, %struct.TYPE_9__*, i32*, i32) #1

declare dso_local i64 @TEST_ptr(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
